@@ -168,7 +168,7 @@ Places at a longitude, latitude point may be found using `Geocoder.reverse()`.
 >>> for f in features:
 ...     print('{place_name}: {id}'.format(**f))
 10003... postcode...
-120 East 13 Street, Manhattan, New York, New York 10003... address...
+120 East 13th Street, Manhattan, New York, New York 10003... address...
 Greenwich Village... neighborhood...
 Manhattan... locality...
 New York, New York... place...
